<resources>
<string name="recover">Recover</string>
<string name="successful">Successful</string>
<string name="share">Share</string>
<string name="videos_scan">Videos Scan</string>
<string name="preparation_scan">Preparation Scan</string>
<string name="scanning">Scanning…</string>
<string name="path_txt">/storage/emulated/0/Download</string>
<string name="large_files">Large Files</string>
<string name="all_select">All Select</string>
<string name="_0_bytes">0 Bytes</string>
<string name="photos_recover">Photos Recover</string>
<string name="videos_recover">Videos Recover</string>
<string name="rate_experience">Rate your experience</string>
<string name="rate_txt">How was your experience with app? please rate us.</string>
<string name="rate_now">Rate Now</string>
<string name="settings">Settings</string>
<string name="get_ads_free_experience">Get ads free experience</string>
<string name="remove_all_ads_forever">Remove all ads forever</string>
<string name="buy_now">Buy Now</string>
<string name="language">Language</string>
<string name="rate_us">Rate Us</string>
<string name="share_app">Share App</string>
<string name="our_more_app">Our More App</string>
<string name="privacy_policy">Privacy Policy</string>
<string name="successfull_recover">Successful Recover</string>
<string name="recovered_successfully">Recovered successfully</string>
<string name="view_recovered_files">View Recovered Files</string>
<string name="cont">Continue</string>
<string name="audios_recover">Audios Recover</string>
<string name="recover_your_files_with_ease">Recover Your Files with Ease!</string>
<string name="onboard_1_txt">Welcome to File Saver! We're here to 
help you recover your lost files quickly and effortlessly.</string>
<string name="manage_your_files">Manage Your Files</string>
<string name="onboard3_txt">Manage and simplify your files and documents 
with ease. We prioritize your privacy and ensure your data remains secure.</string>
<string name="open">open</string>
<string name="select_date_range">Select Date Range</string>
<string name="start_date">Start Date:</string>
<string name="end_date">End Date:</string>
<string name="cancel">Cancel</string>
<string name="ok">Ok</string>
<string name="recoverable_files_are_ready">Recoverable files are ready</string>
<string name="exit_alert_txt">Are you sure you want to exit? if you exit the scanning results will be discarded.</string>
<string name="exit">Exit</string>
<string name="documents_recover">Documents Recover</string>
<string name="preview_files_with_confidence">Preview Files with Confidence!</string>
<string name="onboard_2_txt">Preview your files before recovery to ensure 
you're getting exactly what you need. No more guessing games!</string>
<string name="next">Next</string>
<string name="loading_ads">Loading Ads…</string>
<string name="app_name">Photo Recovery</string>
<string name="splash_txt">Recover All Photos, Videos, Audios,
Document,Contacts</string>
<string name="this_action_may_contains_ad">This action may contains Ad</string>
<string name="recover_deleted_files">Recover deleted files</string>
<string name="limited_time_offer">Limited Time Offer</string>
<string name="subscribe_now">SUBSCRIBE NOW</string>
<string name="pay_once_enjoy_an_ad_free_experience_forever">Pay once, enjoy an ad-free experience forever.</string>
<string name="term_of_service">Term of Service</string>
<string name="contact_recover">Contact Recover</string>
<string name="photos_scan">Photos Scan</string>
<string name="items_found">1080 Items found</string>
<string name="tap_here_to_exit_app">Tap here to exit app</string>
<string name="filter_option">Filter Option</string>
<string name="reset">Reset</string>
<string name="date_by">Date</string>
<string name="all">All</string>
<string name="last_1_month">Last 1 month</string>
<string name="last_6_month">Last 6 month</string>
<string name="last_1_year">last 1 year</string>
<string name="custom_date">Custom Date</string>
<string name="size_by">Size</string>
<string name="_0_1_mb">0 - 1 MB</string>
<string name="_1_5_mb">1 - 5 MB</string>
<string name="_5_10_mb">5 - 10 MB</string>
<string name="more_than_10_mb">More than 10 MB</string>
<string name="sort_by">Sort By</string>
<string name="size_small_to_large">Size: Small to Large</string>
<string name="size_large_to_small">Size: Large to Small</string>
<string name="time_old_to_new">Time: Old to New</string>
<string name="time_new_to_old">Time: New to Old</string>
<string name="apply">Apply</string>
<string name="backup_all_contacts">Backup All Contacts</string>
<string name="layout">Layout</string>
<string name="_2_columns">2 Columns</string>
<string name="_3_columns">3 Columns</string>
<string name="_4_columns">4 Columns</string>
<string name="audios_scan">Audios Scan</string>
<string name="deep_clean">Deep Clean</string>
<string name="scan_junk">Scan Junk</string>
<string name="junk_data_robs_your_space">Junk data robs your space</string>
<string name="duplicate">Duplicate</string>
<string name="screenshots">Screenshots</string>
<string name="change_language">Change Language</string>
<string name="scanning_alert_txt">Are you sure you want to exit? if you exit the scanning process will be discarded.</string>
<string name="recovering_files">Recovering Files…</string>
<string name="take_time_txt">It may take a few seconds to recover the files…</string>
<string name="please_wait">Please wait…</string>
<string name="what_are_you_not_satisfied_with">What are you not satisfied with?</string>
<string name="optimize_ads">Optimize Ads</string>
<string name="enhance_app">Enhance App</string>
<string name="bugs">Bugs</string>
<string name="app_crash">App crash</string>
<string name="add_more_features">Add more features</string>
<string name="other">Other</string>
<string name="please_provide_more_information_at_least_6_characters">Please provide more information (at least 6 characters)</string>
<string name="send_feedback">Send Feedback</string>
<string name="permission_needed">Permission Needed</string>
<string name="permision_txt">Allow access to recover deleted files.</string>
<string name="open_settings">Photo : File Recovery app needs all file access to find and recover your deleted files.</string>
<string name="choose_allow">We never share, send or upload any data to third parties. Your privacy is our priority so all data is protected</string>
<string name="allow">Allow</string>
<string name="deep_scan">Deep Scan</string>
<string name="documents_scan">Documents Scan</string>
<string name="remove_junk">Remove Junk</string>
<string name="total_storage">Files unnecessarily taking up</string>
<string name="clean_now">Clean Now</string>
<string name="photos">Photos</string>
<string name="one_click_images_recovery">Recover lost 
photos</string>
<string name="videos">Videos</string>
<string name="recover_deleted_videos">Recover lost 
videos</string>
<string name="audios">Audios</string>
<string name="one_click_audios_recovery">Recover lost 
audios</string>
<string name="documents">Documents</string>
<string name="recover_deleted_doc">Recover lost 
documents</string>
<string name="contacts_recover">Contacts Recover</string>
<string name="txt_contacts">Scan and recover your contacts</string>
<string name="recover_file">Recovered Files</string>
<string name="view_all_recover_files">Find all the recovered files</string>
<string name="confirm_delete">Confirm Delete Item(s)?</string>
<string name="confirm_delete_text">The File(s) will be permanently deleted and 
cannot be recovered.</string>
<string name="delete">Delete</string>
<string name="need">Need</string>
<string name="permission">Permission</string>
<string name="permission_txt">Allow Gallery to access photos and videos
on your device</string>
<string name="recovered_files">Recovered Files</string>
<string name="Fb_App_Id">1038399954605710</string>
<string name="all_deselect">All Deselect</string>
<string name="smart_deselect">Smart Deselect</string>
<string name="smart_select">Smart Select</string>
<string name="fast_amp_accurate_deep_scan">Fast </resources>amp; accurate deep scan</string>
<string name="feedback_amp_suggestions">Feedback </resources>amp; Suggestions</string>
</resources>