<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_grid"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/_18sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_needed"
            android:textAllCaps="false"
            android:fontFamily="@font/font_med"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:src="@drawable/ic_dialog_line"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>
        <TextView
            android:textSize="@dimen/_18sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/permision_txt"
            android:textAllCaps="false"
            android:fontFamily="@font/font_bold"
            android:textAlignment="center"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17dp"
                android:layout_marginBottom="@dimen/_57dp">
                <TextView
                    android:textColor="@color/text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_settings"
                    android:fontFamily="@font/font_med"
                    android:textAlignment="center"
                    android:layout_marginStart="@dimen/_10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp">
                <TextView
                    android:textColor="@color/grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_allow"
                    android:fontFamily="@font/font_reg"
                    android:textAlignment="center"
                    android:layout_marginStart="@dimen/_10dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/ivAllow"
            android:background="@drawable/bg_recovery"
            android:paddingTop="@dimen/_13dp"
            android:paddingBottom="@dimen/_13dp"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_marginLeft="@dimen/_25dp"
            android:layout_marginTop="@dimen/_18dp"
            android:layout_marginRight="@dimen/_25dp"
            android:layout_marginHorizontal="@dimen/_25dp">
            <TextView
                android:textSize="@dimen/_16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow"
                android:fontFamily="@font/font_med"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
