<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/layout_album_select"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_110dp"
            android:layout_height="@dimen/_120dp"
            android:src="@drawable/ic_icon"/>
        <TextView
            android:textSize="@dimen/_20sp"
            android:textColor="@color/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/app_name"
            android:textScaleX="1.2"
            android:fontFamily="@font/font_bold"/>
        <TextView
            android:textSize="@dimen/_14sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/splash_txt"
            android:textScaleX="1.2"
            android:fontFamily="@font/font_med"
            android:textAlignment="center"/>
    </LinearLayout>
    <TextView
        android:textSize="@dimen/_14sp"
        android:textColor="@color/grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sp"
        android:text="@string/this_action_may_contains_ad"
        android:fontFamily="@font/font_med"/>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_90dp"
        android:layout_marginRight="@dimen/_90dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:indeterminate="true"
        android:layout_marginHorizontal="@dimen/_90dp"
        app:indicatorColor="@color/primary"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"/>
</LinearLayout>
