<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_grid"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/_18sp"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanning"
            android:includeFontPadding="false"
            android:fontFamily="@font/font_bold"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_dialog_line"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:tint="@color/black"/>
        <TextView
            android:textSize="@dimen/_14sp"
            android:textColor="#474646"
            android:layout_gravity="center"
            android:id="@+id/textDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/scanning_alert_txt"
            android:fontFamily="@font/font_reg"
            android:textAlignment="center"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_marginTop="@dimen/_15dp"
            android:baselineAligned="false">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/iv_exit_btn"
                android:background="@drawable/bg_rec_stroke"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_16dp">
                <TextView
                    android:textSize="@dimen/_16sp"
                    android:textColor="@color/black"
                    android:id="@+id/tv_exit_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit"
                    android:fontFamily="@font/font_med"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/iv_cancel_btn"
                android:background="@drawable/bg_recovery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:textSize="@dimen/_16sp"
                    android:textColor="@color/white"
                    android:id="@+id/tv_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:fontFamily="@font/font_med"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
