<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog_grid"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/_250dp">
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16dp"
            android:layout_marginRight="@dimen/_16dp">
            <ImageView
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_100dp"
                android:src="@drawable/ic_feedback"
                android:contentDescription="@null"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/_18sp"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_are_you_not_satisfied_with"
                    android:fontFamily="@font/font_bold"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1dp"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_marginRight="@dimen/_20dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_dialog_line"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:tint="@color/black"
                    android:layout_marginHorizontal="@dimen/_20dp"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_marginRight="@dimen/_20dp"
                    android:layout_marginBottom="@dimen/_20dp">
                    <RelativeLayout
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <com.google.android.material.button.MaterialButton
                            android:textColor="@color/button_txt_color"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:id="@+id/mRbAds"
                            android:padding="@dimen/_12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/optimize_ads"
                            android:singleLine="true"
                            android:fontFamily="@font/font_med"
                            app:backgroundTint="@color/feed_btn"/>
                        <com.google.android.material.button.MaterialButton
                            android:textColor="@color/button_txt_color"
                            android:id="@+id/mRbSpeed"
                            android:padding="@dimen/_12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5dp"
                            android:layout_marginRight="@dimen/_5dp"
                            android:text="@string/enhance_app"
                            android:singleLine="true"
                            android:layout_toEndOf="@+id/mRbAds"
                            android:layout_marginHorizontal="@dimen/_5dp"
                            app:backgroundTint="@color/feed_btn"
                            app:fontFamily="@font/font_med"/>
                        <com.google.android.material.button.MaterialButton
                            android:textColor="@color/button_txt_color"
                            android:id="@+id/mRbBugs"
                            android:padding="@dimen/_12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bugs"
                            android:singleLine="true"
                            android:layout_toEndOf="@+id/mRbSpeed"
                            app:backgroundTint="@color/feed_btn"
                            app:fontFamily="@font/font_med"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <com.google.android.material.button.MaterialButton
                            android:textColor="@color/button_txt_color"
                            android:id="@+id/mRbError"
                            android:padding="@dimen/_12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_crash"
                            android:singleLine="true"
                            app:backgroundTint="@color/feed_btn"
                            app:fontFamily="@font/font_med"/>
                        <com.google.android.material.button.MaterialButton
                            android:textColor="@color/button_txt_color"
                            android:id="@+id/mRbMore"
                            android:padding="@dimen/_12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5dp"
                            android:layout_marginRight="@dimen/_5dp"
                            android:text="@string/add_more_features"
                            android:singleLine="true"
                            android:layout_toEndOf="@+id/mRbError"
                            android:layout_marginHorizontal="@dimen/_5dp"
                            app:backgroundTint="@color/feed_btn"
                            app:fontFamily="@font/font_med"/>
                        <com.google.android.material.button.MaterialButton
                            android:textColor="@color/button_txt_color"
                            android:id="@+id/mRbOther"
                            android:padding="@dimen/_12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/other"
                            android:singleLine="true"
                            android:layout_toEndOf="@+id/mRbMore"
                            app:backgroundTint="@color/feed_btn"
                            app:fontFamily="@font/font_med"/>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_marginRight="@dimen/_20dp"
                    android:layout_marginBottom="@dimen/_20dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:textSize="@dimen/_14sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:gravity="start"
                        android:id="@+id/feedbackEdit"
                        android:background="@drawable/bg_feed"
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:hint="@string/please_provide_more_information_at_least_6_characters"
                        android:inputType="textMultiLine"
                        android:fontFamily="@font/font_reg"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_22dp"
                    android:layout_marginRight="@dimen/_22dp"
                    android:layout_marginBottom="@dimen/_24dp">
                    <com.google.android.material.button.MaterialButton
                        android:textSize="@dimen/_16sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/submitBtn"
                        android:paddingLeft="@dimen/_30dp"
                        android:paddingTop="@dimen/_15dp"
                        android:paddingRight="@dimen/_30dp"
                        android:paddingBottom="@dimen/_15dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/send_feedback"
                        android:singleLine="true"
                        android:layout_weight="1"
                        android:fontFamily="@font/font_bold"
                        app:backgroundTint="@color/primary"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
